--- a/views/html/listas.html
+++ b/views/html/listas.html
@@ -91,12 +91,15 @@
 </div>
 
 	<div class="competenciaPlantilla competencia">
-			<div class="card" id="card1">
+		
+		<div class="card" id="card1">
+			<a class="link2" style="position:absolute; top:0;right:0;width:100%; height:100%;background-color:transparent; display:block" href="listaEspecifica2.html?id="></a>
 				<h2><a class="link titulo" href="listaEspecifica2.html?id="></a></h2>
 				<h3 class="mes"  style="color:rgb(211, 213, 186)"></h3>
 				<h3 class="aumento"></h3>
-			</div>
-		</div>		
+		</div>
+	</div>
+
 	<div class="competencias"><a class="link titulo" href="listaEspecifica2.html?id=" ></a></div>
 </section>
 
