--- a/views/html/listaEspecifica2.html
+++ b/views/html/listaEspecifica2.html
@@ -101,13 +101,17 @@
 							data-show-print="true"				 
 							data-toolbar-align="left"
 							data-show-header="false"
+							data-group-by="true"
 							data-group-by-field="r"
+			
+					
+						
 							>
-							<thead  > 
+							<thead class="thead-dark" > 
 							  <tr> 	
 								<th data-field="id"data-width="10" data-width-unit="%" ><pan>Articulo</span>  								</span style="text-align: center;"></th> 
 								<th data-field="d" >  													Descripcion			</span style="text-align: left;"> </th> 
-								<th data-field="r" data-width="20" data-width-unit="%"data-card-visible="false">  		Rubro				</span> </th> 
+								<!-- <th data-field="r" data-width="20" data-width-unit="%"data-card-visible="false">  		Rubro				</span> </th>  -->
 								<th data-field="pf" data-width="90" data-align="center">  								UNITARIO	 		</th>  
 								<th data-field="p" data-width="90" data-align="center">  								CAJA CERRADA		</th>  
 								<th data-field="s" data-width="90" class="text-right" >     							Stock 				</span> </th> 
