--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -289,8 +289,8 @@
 				  
 			</div> 
 		</div>
-<!-- 
-		<div class=" competencias ofertFiltro" id="contenedorPromo" >
+ 
+		<!-- <div class=" competencias ofertFiltro" id="contenedorPromo" >
 			<div id="footer" >
 				<img id="imagenPromo" src="https://i.ibb.co/tB4VRt6/caja-Herramientas.jpg">
 				<div style="padding-left:5rem;">
@@ -298,7 +298,7 @@
 					<h1 id="recompensa" style="color:orange;">5%OFF + 1 caja herramientas</h1> 
 				</div>
 			</div>	
-		</div>			 -->
+		</div>			  -->
 	</div>  
 	<div class="container-fluid"></div>
 	</div>  
