--- a/views/html/reporte.html
+++ b/views/html/reporte.html
@@ -19,21 +19,25 @@
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-179250562-2"></script>
     </head>
     <body>
+
+        <div id="chart" style="padding:5% 20%">
+        </div>
+        <div id="valvo" style="padding:5% 20%"></div>
         <div style="width:30%;display:flex;justify-content:space-between">
-            <h3 style="display:block;">MOTUL: </h3>
-            <h3 id="12" style="display:block;"></h3>
+            <h3 style="display:block;">FRAM: </h3>
+            <h3 id="1" style="display:block;"></h3>
         </div>  
+        <div style="width:30%;display:flex;justify-content:space-between">
+            <h3 style="display:block;">Ofertas FRAM </h3>
+            <h3 id="23" style="display:block;"></h3>
+        </div> 
+        <div style="width:30%;display:flex;justify-content:space-between">
+            <h3 style="display:block;">Kits FRAM: </h3>
+            <h3 id="16" style="display:block;"></h3>
+        </div> 
         <div style="width:30%;display:flex;justify-content:space-between">
             <h3 style="display:block;">VALVOLINE: </h3>
             <h3 id="3" style="display:block;"></h3>
-        </div> 
-        <div style="width:30%;display:flex;justify-content:space-between">
-            <h3 style="display:block;">TOTAL: </h3>
-            <h3 id="5" style="display:block;"></h3>
-        </div> 
-        <div style="width:30%;display:flex;justify-content:space-between">
-            <h3 style="display:block;">SELENIA: </h3>
-            <h3 id="316" style="display:block;"></h3>
         </div> 
         <div style="width:30%;display:flex;justify-content:space-between">
             <h3 style="display:block;">FRAM: </h3>
