--- a/views/html/reporte.html
+++ b/views/html/reporte.html
@@ -20,8 +20,7 @@
     </head>
     <body>
 
-        <div id="chart" style="padding:5% 20%">
-        </div>
+        <div id="chart" style="padding:5% 20%"></div>
         <div id="valvo" style="padding:5% 20%"></div>
         <div style="width:30%;display:flex;justify-content:space-between">
             <h3 style="display:block;">FRAM: </h3>
