--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -55,8 +55,8 @@
 			 <li><a class="" href="ofertas.html" 			title="">Ofertas</a></li>
 			 <li><a class="" href="faq.html" 				title="">Abrir un lubricentro</a></li>		
 		 </ul>	
-	 </nav>   end #menu-nav-wrap 
-</header>  end header -->  
+	 </nav>  
+</header>  
 
 <body>
 	
@@ -290,7 +290,7 @@
 			</div> 
 		</div>
  
-		<!-- <div class=" competencias ofertFiltro" id="contenedorPromo" >
+		 <div class=" competencias ofertFiltro" id="contenedorPromo" >
 			<div id="footer" >
 				<img id="imagenPromo" src="https://i.ibb.co/tB4VRt6/caja-Herramientas.jpg">
 				<div style="padding-left:5rem;">
@@ -298,7 +298,7 @@
 					<h1 id="recompensa" style="color:orange;">5%OFF + 1 caja herramientas</h1> 
 				</div>
 			</div>	
-		</div>			  -->
+		</div>			  
 	</div>  
 	<div class="container-fluid"></div>
 	</div>  
@@ -401,7 +401,7 @@
 
 
 
-<!-- <section class="container-fluid blanco">
+<section class="container-fluid blanco">
 	<div class="intro-wrap col-sm-12">
 			<div class="container-fluid"><h1 id="titulo">SELENIA<h1></div>	
 			<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA: Caja Cerrada</h1></div> 	 
@@ -421,7 +421,7 @@
 		</div>
 	</div>  
 </div>
-</section> -->
+</section> 
 
 
 </body>
