pongo total de vuelta

--- a/views/html/reporte.html
+++ b/views/html/reporte.html
@@ -19,7 +19,10 @@
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-179250562-2"></script>
     </head>
     <body>
-
+        <select name="dropdown" id="dropdown">
+            <option value="1" selected="selected">Fram</option>
+            <option value="agrupaciones.Valvoline">Valvoline</option>
+        </select>
         <div id="chart" style="padding:5% 20%"></div>
         <div id="valvo" style="padding:5% 20%"></div>
         <div style="width:30%;display:flex;justify-content:space-between">
