--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -376,7 +376,7 @@
 
 
 
-<!-- 
+
 <section class="container-fluid ">
 	<div class="intro-wrap col-sm-12 negro">
 			<div class="container-fluid"><h1 id="titulo">TOTAL<h1></div>	
@@ -397,7 +397,7 @@
 		</div>
 	</div>  
 </div>
-</section> -->
+</section> 
 
 
 
