--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -64,7 +64,7 @@
 ================================================== -->
 <div class="container-fluid cabecera"> 
 	<h1 id="nombreLista titulo">Ofertas Vigentes</h1>
-	<h2 id="ultimaActualizacion">PRECIOS FINALES / NOV 2020</h2>	
+	<h2 id="ultimaActualizacion">PRECIOS FINALES / DIC 2020</h2>	
 	
 </div>
 <!-- <section class="container-fluid ">
@@ -206,6 +206,18 @@
 				<div style="padding-left:5rem;">
 					<h1 id="gancho">Llevando 4 cajas de Advanced <br />(cualquier graduacion)</h1>
 					<h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$3099</u>+12 termos +1 campera</h1> 
+				</div>
+			</div>	
+
+		
+		</div>
+		
+		<div class=" competencias ofertFiltro" id="contenedorPromo" >
+			<div id="footer" >
+				<img id="imagenPromo" src="../images/promoCartelVintage.png">
+				<div style="padding-left:5rem;">
+					<h1 id="gancho">Llevando 1 tambor de <br />Premium Protect 10w40 edicion Limitada</h1>
+					<h1 id="recompensa" style="color:orange;">te llevas<u style="font-weight:bold">1 cartel Vintage + 6 termos</u></h1> 
 				</div>
 			</div>	
 
