--- a/views/html/stock2.html
+++ b/views/html/stock2.html
@@ -64,6 +64,8 @@
 							data-mobile-responsive="true"
 							data-search-align="left"
 							data-search="true"
+							data-sort-name="stockCritico"
+  							data-sort-order="desc"
 							data-show-export="true"
 							data-show-columns="true"
 							data-key-events="true"
@@ -79,7 +81,7 @@
 								<th data-field="UM" 	class="precio"	data-width="2" data-width-unit="%" data-align="center"> UM </span> </th>
 								<th data-field="unidades"class="precio" data-width="5" data-width-unit="%" data-align="center"> Stock minimo</span> </th>  
 								<th data-field="cant_stock" 			data-width="5" data-width-unit="%" data-align="center"> Stock en RP</span> </th>  
-								<th data-field="stockCritico" 			data-sortable="true"  data-sort-order="desc"data-width="5" data-width-unit="%" data-align="center"> actulziacion</th>
+								<!-- <th data-field="stockCritico" 			data-sortable="true"  data-sort-order="desc"data-width="5" data-width-unit="%" data-align="center"> actulziacion</th> -->
 							  </tr> 
 						</thead> 
 					</table> 		  
