--- a/views/html/stock2.html
+++ b/views/html/stock2.html
@@ -48,12 +48,7 @@
 
 
 <body id="body">
-	<div class="container-fluid cabecera"> 
-		<h1 id="nombreLista"></h1>
-	
-		<h2>Disponibles en breve</h2>
-	</div>
-	
+
 
 <section id="seccionLista">
 	<div class="intro-wrap col-sm-12" style="height:80%;">
@@ -81,7 +76,7 @@
 								<th data-field="UM" 	class="precio"	data-width="2" data-width-unit="%" data-align="center"> UM </span> </th>
 								<th data-field="unidades"class="precio" data-width="5" data-width-unit="%" data-align="center"> Stock minimo</span> </th>  
 								<th data-field="cant_stock" 			data-width="5" data-width-unit="%" data-align="center"> Stock en RP</span> </th>  
-								<!-- <th data-field="stockCritico" 			data-sortable="true"  data-sort-order="desc"data-width="5" data-width-unit="%" data-align="center"> actulziacion</th> -->
+								 <th data-field="stockCritico" 			data-sortable="true"  data-sort-order="desc"data-width="5" data-width-unit="%" data-align="center"> actulziacion</th>
 							  </tr> 
 						</thead> 
 					</table> 		  
