--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -94,7 +94,7 @@
 			<div class="container-fluid">
 				<div id="titulo">
 					<h1 style="z-index:10;" >FILTROS</h1>
-					<h2 style="z-index:10;" id="compraMinima">Compra Mínima:24 unidades</h2>
+					<h2 style="z-index:10;" id="compraMinima">Compra Mínima:24 unidades surtidas</h2>
 				</div>
 				
 			</div>	
@@ -112,18 +112,7 @@
 					</div>	  
 					 
 			</div> 
-		</div>
-		<!-- <div class=" competencias ofertFiltro" id="contenedorPromo" >
-			<div id="footer" >
-				<img id="imagenPromo" src="https://i.ibb.co/hcTkNgV/promo-Filtros.jpg">
-				<div style="padding-left:5rem;">
-					<h1 id="gancho">Llevando 48 unidades</h1>
-					<h1 id="recompensa" style="color:orange;">Te llevas de regalo <u style="font-weight:bold">2 remeras</u></h1> 
-				</div>
-			</div>	
-		</div> -->
-		
-		
+		</div>		
 
 	</div>  
 	<div class="container-fluid"></div>
