--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -64,7 +64,7 @@
 ================================================== -->
 <div class="container-fluid cabecera"> 
 	<h1 id="nombreLista titulo">Ofertas Vigentes</h1>
-	<h2 id="ultimaActualizacion">PRECIOS FINALES / DIC 2020</h2>	
+	<h2 id="ultimaActualizacion">PRECIOS FINALES / MAR 2021</h2>	
 	
 </div>
 <!-- <section class="container-fluid ">
@@ -233,7 +233,7 @@
 				  
 			</div> 
 		</div>
-
+<!-- 
 		<div class=" competencias ofertFiltro" id="contenedorPromo" >
 			<div id="footer" >
 				<img id="imagenPromo" src="https://i.ibb.co/84WNjqC/promo-Valvoline-Varios.jpg">
@@ -242,7 +242,7 @@
 					<h1 id="recompensa" style="color:orange;">5%OFF + 3 gorras</h1> 
 				</div>
 			</div>	
-		</div>		
+		</div>		 -->
 		</div>		
 	</div>  
 	<div class="container-fluid"></div>
