--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -169,7 +169,7 @@
 		<div class="container-fluid">
 			<div id="titulo">
 				<h1 style="z-index:10;" >VALVOLINE LUBRICANTES</h1>
-				<h2 style="z-index:10;" id="compraMinima">Precios FINALES x caja cerrada </br> <h2 style="color:yellow">5% OFF x 3 cajas surtidas</h2> </h2>
+				<h2 style="z-index:10;" id="compraMinima">Precios FINALES x caja cerrada </br> <h2 style="color:yellow">5% OFF x 3 cajas</h2> </h2>
 			</div>
 			
 		</div>		 
