--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -335,7 +335,7 @@
 		<div class="container-fluid">
 			<div id="titulo">
 				<h1 style="z-index:10;" >VINTO</h1>
-				<h2 style="z-index:10;" id="compraMinima">Precios x caja cerrada de 12 unidades</h2>
+				<h2 style="z-index:10;" id="compraMinima">Precios x caja cerrada (12 0 16 UNIDADES VARIA SEGUN CODIGO)</h2>
 			</div>
 			
 		</div>		 
