--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -93,7 +93,7 @@
 	<div class="intro-wrap col-sm-12 negro">
 			<div class="container-fluid">
 				<div id="titulo">
-					<h1 style="z-index:10;" >FILTROS</h1>
+					<h1 style="z-index:10;" >FILTROS FRAM</h1>
 					<h2 style="z-index:10;" id="compraMinima">Compra Mínima:24 unidades surtidas</h2>
 				</div>
 				
@@ -123,6 +123,35 @@
 </div>
 </section>
 
+<section class="container-fluid">
+	<div class="intro-wrap col-sm-12">
+		<div class="container-fluid">
+			<div id="titulo">
+				<h1 style="z-index:10;" >FILTROS VINTO</h1>
+				<h2 style="z-index:10;" id="compraMinima">Precios x caja cerrada (12 0 16 UNIDADES VARIA SEGUN CODIGO)</h2>
+			</div>
+			
+		</div>		 
+		<div class="container-fluid"><h1 id="subtitulo">.</h1></div> 	
+		<div class="container-fluid">  
+			<div class="container-fluid  competencias ofertasVinto" style="justify-content: left;" >
+				<div class="row">
+					  <div class="col-3 col-sm-3 ofertaVinto" id="plantilla10">
+						  <div class="rectanguloOferta">
+							<h2 class="titulo"></h2>
+							<img class="imagenKit">
+							<h2 class="precio"></h2>
+						  </div>
+					</div>
+				  
+			</div> 
+		</div>
+	
+	</div>  
+	<div class="container-fluid"></div>
+	</div style="height:100px;"> .</div>
+</div>
+</section>
 
  
 	<section class="container-fluid">
@@ -330,35 +359,6 @@
 
 
 
-<section class="container-fluid">
-	<div class="intro-wrap col-sm-12">
-		<div class="container-fluid">
-			<div id="titulo">
-				<h1 style="z-index:10;" >VINTO</h1>
-				<h2 style="z-index:10;" id="compraMinima">Precios x caja cerrada (12 0 16 UNIDADES VARIA SEGUN CODIGO)</h2>
-			</div>
-			
-		</div>		 
-		<div class="container-fluid"><h1 id="subtitulo">.</h1></div> 	
-		<div class="container-fluid">  
-			<div class="container-fluid  competencias ofertasVinto" style="justify-content: left;" >
-				<div class="row">
-					  <div class="col-3 col-sm-3 ofertaVinto" id="plantilla10">
-						  <div class="rectanguloOferta">
-							<h2 class="titulo"></h2>
-							<img class="imagenKit">
-							<h2 class="precio"></h2>
-						  </div>
-					</div>
-				  
-			</div> 
-		</div>
-	
-	</div>  
-	<div class="container-fluid"></div>
-	</div style="height:100px;"> .</div>
-</div>
-</section>
 
 
 
