--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -139,6 +139,7 @@
 					  <div class="col-3 col-sm-3 ofertaVinto" id="plantilla10">
 						  <div class="rectanguloOferta">
 							<h2 class="titulo"></h2>
+                            <h5 class="detalle" id="descripcionFiltros"></h5>
 							<img class="imagenKit">
 							<h2 class="precio"></h2>
 						  </div>
