--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -154,6 +154,37 @@
 </div>
 </section>
 
+<!-- <section class="container-fluid">
+	<div class="intro-wrap col-sm-12">
+		<div class="container-fluid">
+			<div id="titulo" style="background-color:red !important">
+				<h1 style="z-index:10;"  >OFERTON!!! REMATE MERCADERIA</h1>
+				<h2 style="z-index:10;" id="compraMinima">12 unidades surtidas Hasta Agotar stock</h2>
+			</div>
+			
+		</div>		 
+		<div class="container-fluid"><h1 id="subtitulo">.</h1></div> 	
+		<div class="container-fluid">  
+			<div class="container-fluid  competencias rematesMercaderia" style="justify-content: left;" >
+				<div class="row">
+					  <div class="col-3 col-sm-3 remateMercaderia" id="plantilla13" >
+						  <div class="rectanguloOferta">
+							<h2 class="titulo" style="background-color:red !important"></h2>
+                            <h5 class="detalle" id="descripcionFiltros"></h5>
+							<img class="imagenKit">
+							<h2 class="precio" style="color:red"></h2>
+						  </div>
+					</div>
+				  
+			</div> 
+		</div>
+	
+	</div>  
+	<div class="container-fluid"></div>
+	</div style="height:100px;"> .</div>
+</div>
+</section> -->
+
  
 	<section class="container-fluid">
 		<div class="intro-wrap col-sm-12">
@@ -227,6 +258,14 @@
 					<h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$3621</u>+12 termos +1 campera</h1> 
 				</div>
 			</div>	
+        
+        <div id="footer" >
+			<img id="imagenPromo" src="../images/promoPremium.jpg">
+			<div style="padding-left:5rem;">
+				<h1 id="gancho">Premium Protection 4L + 1 bidon de 1L <br />(minimo 3 cajas)</h1>
+				<h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$1800</h1> 
+			</div>
+		</div>	
 
 		
 		</div>
