--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -252,10 +252,10 @@
 		</div>
 		<div class=" competencias ofertFiltro" id="contenedorPromo" >
 		<div id="footer" >
-				<img id="imagenPromo" src="https://i.ibb.co/ysVvH3h/promo-Valvo.jpg">
+				<img id="imagenPromo" src="../images/promoAbril.jpg">
 				<div style="padding-left:5rem;">
 					<h1 id="gancho">Llevando 4 cajas de Advanced <br />(cualquier graduacion)</h1>
-					<h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$3621</u>+12 termos +1 campera</h1> 
+					<h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$3900</u> + 12 remeras</h1> 
 				</div>
 			</div>	
         
@@ -263,10 +263,18 @@
 			<img id="imagenPromo" src="../images/promoPremium.jpg">
 			<div style="padding-left:5rem;">
 				<h1 id="gancho">Premium Protection 4L + 1 bidon de 1L <br />(minimo 3 cajas)</h1>
-				<h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$1800</h1> 
+				<h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$2015</h1> 
 			</div>
 		</div>	
 
+
+        <div id="footer" >
+			<img id="imagenPromo" src="../images/premium.jpg">
+			<div style="padding-left:5rem;">
+				<h1 id="gancho">Premium Protection 4L <br />(caja cerrada)</h1>
+				<h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$1680</h1> 
+			</div>
+		</div>	
 		
 		</div>
 
