--- a/views/html/listas.html
+++ b/views/html/listas.html
@@ -96,7 +96,8 @@
 			<a class="link2" style="position:absolute; top:0;right:0;width:100%; height:100%;background-color:transparent; display:block" href="listaEspecifica2.html?id="></a>
 				<h2><a class="link titulo" href="listaEspecifica2.html?id="></a></h2>
 				<h3 class="mes"  style="color:rgb(211, 213, 186)"></h3>
-				<h3 class="aumento"></h3>
+				<h3 class="mes2" style=font-size:2rem></h3>
+            <h3 class="aumento" style="color:rgb(243, 243, 243); font-size:1rem"></h3>
 		</div>
 	</div>
 
