--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -64,7 +64,7 @@
 ================================================== -->
 <div class="container-fluid cabecera"> 
 	<h1 id="nombreLista titulo">Ofertas Vigentes</h1>
-	<h2 id="ultimaActualizacion">PRECIOS FINALES / MAR 2021</h2>	
+	<h2 id="ultimaActualizacion">PRECIOS FINALES</h2>	
 	
 </div>
 <!-- <section class="container-fluid ">
@@ -94,7 +94,7 @@
 			<div class="container-fluid">
 				<div id="titulo">
 					<h1 style="z-index:10;" >FILTROS FRAM</h1>
-					<h2 style="z-index:10;" id="compraMinima">Compra Mínima:24 unidades surtidas</h2>
+               <h1  id="compraMinima" style="z-index:10;">COMPRA MINIMA: 24 UNIDADES SURTIDAS</h1>
 				</div>
 				
 			</div>	
@@ -123,7 +123,7 @@
 </div>
 </section>
 
-<section class="container-fluid">
+<!-- <section class="container-fluid">
 	<div class="intro-wrap col-sm-12">
 		<div class="container-fluid">
 			<div id="titulo">
@@ -151,7 +151,7 @@
 	</div>  
 	<div class="container-fluid"></div>
 	</div style="height:100px;"> .</div>
-</div>
+</div> -->
 </section>
 
 <!-- <section class="container-fluid">
@@ -191,7 +191,7 @@
 			<div class="container-fluid">
 				<div id="titulo">
 					<h1 style="z-index:10;" >FILTROS</h1>
-					<h2 style="z-index:10;" id="compraMinima">Compra mínima:6 kits surtidos</h2>
+					<h1  id="compraMinima" style="z-index:10;">COMPRA MINIMA: 6 KITS SURTIDOS</h1>
 				</div>
 				
 			</div>		 
@@ -230,7 +230,7 @@
 		<div class="container-fluid">
 			<div id="titulo">
 				<h1 style="z-index:10;" >VALVOLINE LUBRICANTES</h1>
-				<h2 style="z-index:10;" id="compraMinima">Precios FINALES x caja cerrada </br> <h2 style="color:yellow">5% OFF x 3 cajas</h2> </h2>
+             <h1  id="compraMinima" style="z-index:10;">PRECIOS UNITARIOS FINALES LLEVANDO CAJA CERRADA</h1>
 			</div>
 			
 		</div>		 
@@ -258,14 +258,14 @@
 					<h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$3900</u> + 12 remeras</h1> 
 				</div>
 			</div>	
-        
+<!--         
         <div id="footer" >
 			<img id="imagenPromo" src="../images/promoPremium.jpg">
 			<div style="padding-left:5rem;">
 				<h1 id="gancho">Premium Protection 4L + 1 bidon de 1L <br />(minimo 3 cajas)</h1>
 				<h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$2115</h1> 
 			</div>
-		</div>	
+		</div>	 -->
 
 
         <div id="footer" >
@@ -291,7 +291,7 @@
 		<div class="container-fluid">
 			<div id="titulo">
 				<h1 style="z-index:10;" >VALVOLINE VARIOS</h1>
-				<h2 style="z-index:10;" id="compraMinima">Precios FINALES x caja cerrada </h2>
+            <h1  id="compraMinima" style="z-index:10;">PRECIOS UNITARIOS FINALES LLEVANDO CAJA CERRADA</h1>
 			</div>
 			
 		</div>		 
@@ -338,7 +338,7 @@
 		<div class="container-fluid">
 			<div id="titulo">
 				<h1 style="z-index:10;" >MOTUL</h1>
-				<h2 style="z-index:10;" id="compraMinima">Precios FINALES x caja cerrada</h2>
+            <h1  id="compraMinima" style="z-index:10;">PRECIOS UNITARIOS FINALES LLEVANDO CAJA CERRADA</h1>
 			</div>
 			
 		</div>		 
@@ -360,10 +360,10 @@
  
 		 <div class=" competencias ofertFiltro" id="contenedorPromo" >
 			<div id="footer" >
-				<img id="imagenPromo" src="https://i.ibb.co/tB4VRt6/caja-Herramientas.jpg">
+				<img id="imagenPromo" src="../images/prodcutos de Oferta/tabla.png">
 				<div style="padding-left:5rem;">
-					<h1 id="gancho">Llevando 3 cajas surtidas </h1>
-					<h1 id="recompensa" style="color:orange;">5%OFF + 1 caja herramientas</h1> 
+					<h1 id="gancho">Llevando 3 cajas surtidas, te llevas una tabla de cocina </h1>
+					<h1 id="recompensa" style="color:orange;"></h1> 
 				</div>
 			</div>	
 		</div>			  
@@ -374,12 +374,85 @@
 </section>
 
 
+
+
+
+
+
+
+
+
+
+
+
+<section class="container-fluid ">
+	<div class="intro-wrap col-sm-12 negro">
+			<div class="container-fluid">
+            
+            <div id="titulo">
+               <h1 style="z-index:10;" >TOTAL</h1>
+               <h1  id="compraMinima" style="z-index:10;">PRECIOS UNITARIOS FINALES LLEVANDO CAJA CERRADA</h1>
+            </div>
+            
+         </div>	
+         <div class="container-fluid"><h1 id="subtitulo">.</h1></div> 	
+ 
+		<div class="container-fluid">  
+			<div class="container-fluid  competencias totalOfertas" style="justify-content: left;" >
+				<div class="row">
+					  <div class="col-4 col-sm-3 total" id="plantilla5">
+						  <div class="rectanguloOferta">
+							<h2 class="titulo"></h2>
+							<h5 class="detalle"></h5>
+							<img class="imagenKit">
+							<h2 class="precio"></h2>
+						  </div>
+					</div>
+				  
+			</div> 
+		</div>
+	</div>  
+</div>
+</section> 
+
+
+
+<section class="container-fluid blanco">
+	<div class="intro-wrap col-sm-12">
+			<div class="container-fluid">
+     
+            <div id="titulo">
+               <h1 style="z-index:10;" >SELENIA</h1>
+               <h1  id="compraMinima" style="z-index:10;">PRECIOS UNITARIOS FINALES LLEVANDO CAJA CERRADA</h1>
+            </div>
+         
+         </div>	
+         <div class="container-fluid"><h1 id="subtitulo">.</h1></div> 		 
+		<div class="container-fluid">  
+			<div class="container-fluid  competencias seleniaOfertas" style="justify-content: left;" >
+				<div class="row">
+					  <div class="col-4 col-sm-3 selenia" id="plantilla6">
+						  <div class="rectanguloOferta">
+							<h2 class="titulo"></h2>
+							<h5 class="detalle"></h5>
+							<img class="imagenKit">
+							<h2 class="precio"></h2>
+						  </div>
+					</div>
+				  
+			</div> 
+		</div>
+	</div>  
+</div>
+</section> 
+
+
 <section class="container-fluid">
 	<div class="intro-wrap col-sm-12">
 		<div class="container-fluid">
 			<div id="titulo">
 				<h1 style="z-index:10;" >DE TODO UN POCO</h1>
-				<h2 style="z-index:10;" id="compraMinima">Compra mínima: 12 unidades surtidas</h2>
+				<h1  id="compraMinima" style="z-index:10;">PRECIOS UNITARIOS FINALES LLEVANDO CAJA CERRADA</h1>
 			</div>
 			
 		</div>		 
@@ -405,62 +478,6 @@
 </div>
 </section>
 
-
-
-
-
-
-
-
-
-
-
-
-<section class="container-fluid ">
-	<div class="intro-wrap col-sm-12 negro">
-			<div class="container-fluid"><h1 id="titulo">TOTAL<h1></div>	
-			<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA: Caja Cerrada</h1></div> 	 
-		<div class="container-fluid">  
-			<div class="container-fluid  competencias totalOfertas" style="justify-content: left;" >
-				<div class="row">
-					  <div class="col-4 col-sm-3 total" id="plantilla5">
-						  <div class="rectanguloOferta">
-							<h2 class="titulo"></h2>
-							<h5 class="detalle"></h5>
-							<img class="imagenKit">
-							<h2 class="precio"></h2>
-						  </div>
-					</div>
-				  
-			</div> 
-		</div>
-	</div>  
-</div>
-</section> 
-
-
-
-<section class="container-fluid blanco">
-	<div class="intro-wrap col-sm-12">
-			<div class="container-fluid"><h1 id="titulo">SELENIA<h1></div>	
-			<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA: Caja Cerrada</h1></div> 	 
-		<div class="container-fluid">  
-			<div class="container-fluid  competencias seleniaOfertas" style="justify-content: left;" >
-				<div class="row">
-					  <div class="col-4 col-sm-3 selenia" id="plantilla6">
-						  <div class="rectanguloOferta">
-							<h2 class="titulo"></h2>
-							<h5 class="detalle"></h5>
-							<img class="imagenKit">
-							<h2 class="precio"></h2>
-						  </div>
-					</div>
-				  
-			</div> 
-		</div>
-	</div>  
-</div>
-</section> 
 
 
 </body>
