--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -273,6 +273,7 @@
 			<div style="padding-left:5rem;">
 				<h1 id="gancho">Premium Protection 4L <br />(caja cerrada)</h1>
 				<h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$1905</h1> 
+				<h1 id="gancho">Llevando 3 cajas, 5% off aparte -> Pagas $1810</h1>
 			</div>
 		</div>	
 		
