--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -252,10 +252,10 @@
 		</div>
 		<div class=" competencias ofertFiltro" id="contenedorPromo" >
 		<div id="footer" >
-				<img id="imagenPromo" src="../images/promoAbril.jpg">
+				<img id="imagenPromo" src="../images/campera.jpeg">
 				<div style="padding-left:5rem;">
 					<h1 id="gancho">Llevando 4 cajas de Advanced <br />(cualquier graduacion)</h1>
-					<h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$4150</u> + 12 remeras + 12 PH4701 (CHEVROLET)</h1> 
+					<h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$4100</u> + 1 campera Valvoline Original</h1> 
 				</div>
 			</div>	
 <!--         
@@ -271,7 +271,7 @@
         <div id="footer" >
 			<img id="imagenPromo" src="../images/premium.jpg">
 			<div style="padding-left:5rem;">
-				<h1 id="gancho">Premium Protectionn 4L <br />(caja cerrada)</h1>
+				<h1 id="gancho">Premium Protection 4L <br />(caja cerrada)</h1>
 				<h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$1905</h1> 
 				<h1 id="gancho">Llevando 3 cajas tenes 5% adicional -> Pagas $1810</h1>
 			</div>
