--- a/views/css/carrousel.css
+++ b/views/css/carrousel.css
@@ -11,9 +11,10 @@
 }
 
 .logo{
-  width:7rem;
-  height: 7rem;
+  width:10rem;
+  height: 10rem;
   margin:1rem 0.5rem;
+  padding:1rem 0rem;
  }
 
  
