--- a/views/html/faq.html
+++ b/views/html/faq.html
@@ -111,11 +111,8 @@
     
 <!-- VIDEOS
 ================================================== -->
-<div  class="seccionfull">
+<div  class="seccionfull" style="padding:0 !important">
 	<div><iframe width="640" height="360" src="https://www.youtube.com/embed/nho_k5NQR4Q" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-
-
-
 	<div><iframe width="441" height="360" src="https://www.youtube.com/embed/4Geyb8FKzvQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 	<div><iframe width="640" height="360" src="https://www.youtube.com/embed/cFB69J3LirI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 </div>
@@ -132,11 +129,53 @@
 <div class="overlay">
 <div class="gradient-overlay">
 	<div class="row narrow section-intro with-bottom-sep animate-this">
-		<h2 style="color:white;padding-top:3rem;">Pregutnas Frecuentes</h2>
+		<h1 style="color:white;padding:3rem;">Pregutnas Frecuentes</h1>
 		<div class="col-full" id="campoPreguntas">
-			<h1 id="tituloSeccion2" style="color:black"></h1>
-			<p id="descSeccion2" style="color:black"></p>
+			<h3 id="tituloSeccion2" style="color:rgb(126, 126, 126)">Margenes del negocio</h3>
+			<p id="descSeccion2" style="color:rgb(238, 238, 238)">La principal diferencia entre un aceite sintético y semi-sintético radica en los componentes de fabricación</p>
 		</div>
+      <div class="col-full" id="campoPreguntas">
+			<h3 id="tituloSeccion2" style="color:rgb(126, 126, 126)">Ubicacion del negocio</h3>
+			<p id="descSeccion2" style="color:rgb(238, 238, 238)">La ubicación es algo fundamental para este tipo de locales. Debe ser de fácil acceso y en un zona transitada o alrededores</p>
+		</div>
+
+
+      <div class="col-full" id="campoPreguntas">
+			<h3 id="tituloSeccion2" style="color:rgb(126, 126, 126)">Stock inicialMargenes del negocio</h3>
+			<p id="descSeccion2" style="color:rgb(238, 238, 238)">El stock incial de un lubricentro se va a basar preferentemente en el parque automotor más solicitado o adquirido en el país/provincia que el lubricentro se encuentre. Siempre recomendamos a los clientes que analicen el movimiento en la zona que se desea abrir el local primero.</p>
+		</div>
+
+
+      <div class="col-full" id="campoPreguntas">
+			<h3 id="tituloSeccion2" style="color:rgb(126, 126, 126)">Equipamiento para la abertura</h3>
+			<p id="descSeccion2" style="color:rgb(238, 238, 238)">El equipamiento es la imagen, por así decirlo, del local. Si el cliente ve el local bien equipado y prolijo eso le genera confianza y, por ende, ganas de preguntar o realizar el arreglo de su vehículo.</p>
+		</div>
+
+
+
+
+      <div class="col-full" id="campoPreguntas">
+			<h3 id="tituloSeccion2" style="color:rgb(126, 126, 126)">Todos los aceites son iguales?</h3>
+			<p id="descSeccion2" style="color:rgb(238, 238, 238)">No todos los aceites son iguales. Por densidad, por tipo de aceite (mineral, semi-sintético, sintético),normas que cumplen según marcas y también las bases modifican si son nacionales o importados y, en este caso, tambíen van a modificar los valores por las mismas caraterísticas antes mencionadas. Los vehículos salen de fábrica con lubricantes recomendados y generalmente los clientes prefieren respetar esa recomendación para evitar problemas y el local debe poder brindarle ese abanico de posibilidades.</p>
+		</div>
+
+      <div class="col-full" id="campoPreguntas">
+			<h3 id="tituloSeccion2" style="color:rgb(126, 126, 126)">Bidon vs tambor</h3>
+			<p id="descSeccion2" style="color:rgb(238, 238, 238)">Como en la mayoría de los comercios comprar por más cantidad de un mismo producto es más económico. El aceite envasado es más caro que los baldes o tambores pero le brinda una mayor confianza al cliente y en algún punto es más fácil llevar el control de stock y reposición.</p>
+		</div>
+
+      <div class="col-full" id="campoPreguntas">
+			<h3 id="tituloSeccion2" style="color:rgb(126, 126, 126)">Productos compelementarios</h3>
+			<p id="descSeccion2" style="color:rgb(238, 238, 238)">Esto es algo similar al ítem descripto anteriormente de primera y segundas marcas, brindar un abanico más amplio de mercadería, va a darle al cliente la posibilidad de poder encontrar todo en un lugar y no tener que estar desplazandose por varios comercios para realizarle un service al auto. Algunos ejemplos podrían ser: baterías, luces, matafuegos, etc.</p>
+		</div>
+
+
+
+      
+
+
+
+
 	</div>
 </div>
 
