--- a/views/css/main.css
+++ b/views/css/main.css
@@ -1526,7 +1526,7 @@ header .header-logo a {
  * ------------------------------------------------------------------- */
 #home {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: #151515;
   background-image: url(../images/fondoNaranja.jpg);
   background-repeat: no-repeat;
@@ -1535,7 +1535,7 @@ header .header-logo a {
   -moz-background-size: cover;
   background-size: cover;
   background-attachment: fixed;
-  min-height: 600px;
+  /* min-height: 600px; */
   position: relative;
 }
 #home .overlay {
