--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -255,11 +255,7 @@
 				<img id="imagenPromo" src="../images/prodcutos de Oferta/campera.jpeg">
 				<div style="padding-left:5rem;">
 					<h1 id="gancho">Llevando 4 cajas de Advanced <br />(cualquier graduacion)</h1>
-<<<<<<< HEAD
-					<h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$4150</u> + 12 remeras + 12 PH4701 (CHEVROLET)</h1> 
-=======
 					<h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$4100</u> + 1 campera Valvoline Original</h1> 
->>>>>>> listas
 				</div>
 			</div>	
 <!--         
@@ -362,7 +358,7 @@
 				  
 			</div> 
 		</div>
- 
+<!--  
 		 <div class=" competencias ofertFiltro" id="contenedorPromo" >
 			<div id="footer" >
 				<img id="imagenPromo" src="../images/prodcutos de Oferta/tabla.png">
@@ -371,7 +367,7 @@
 					<h1 id="recompensa" style="color:orange;"></h1> 
 				</div>
 			</div>	
-		</div>			  
+		</div>			   -->
 	</div>  
 	<div class="container-fluid"></div>
 	</div>  
