--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -271,11 +271,22 @@
         <div id="footer" >
 			<img id="imagenPromo" src="../images/premium.jpg">
 			<div style="padding-left:5rem;">
-				<h1 id="gancho">Premium Protection 4L <br />(caja cerrada)</h1>
-				<h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$2376</h1> 
-				<h1 id="gancho">Llevando 3 cajas te llevas 1 cargo sin cargo -> Pagas $1980</h1>
+				<h1 id="gancho">PROMO 4x3 </h1>
+				<h1 id="gancho">Llevando 3 cajas te llevas 1 caja sin cargo</h1>
+            
+				<h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$1980 el bidon</h1> 
 			</div>
 		</div>	
+
+      <div id="footer" >
+			<img id="imagenPromo" src="../images/premium2.jpg">
+			<div style="padding-left:5rem;">
+				<h1 id="gancho">PROMO ACEITE Y FILTROS </h1>
+               <h1 id="gancho">Llevando 4 cajas te llevas 1 PACK de filtros sin cargo</h1>
+               <h4 id="gancho">  PH12482: Renault Kwid | PH5548A: VW Trend | PH5949: Fiat Fire | PH5796: Renault | G10230: Combustible</h4>
+               <h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$2250 el bidon</h1> 
+			</div>
+		</div>
 		
 		</div>
 
