--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -397,7 +397,7 @@
 
 
 
-<section class="container-fluid ">
+<!-- <section class="container-fluid ">
 	<div class="intro-wrap col-sm-12 negro">
 			<div class="container-fluid">
             
@@ -425,7 +425,7 @@
 		</div>
 	</div>  
 </div>
-</section> 
+</section>  -->
 
 
 
