--- a/views/html/faq.html
+++ b/views/html/faq.html
@@ -14,12 +14,33 @@
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="icon"          href="favicon.ico" type="image/x-icon">
 <script src="../js/src/jquery-2.1.3.min.js"></script>
+<link rel="stylesheet" 			href="https://rawcdn.githack.com/rafaelbotazini/floating-whatsapp/3d18b26d5c7d430a1ab0b664f8ca6b69014aed68/floating-wpp.min.css">
+<script type="text/javascript" src="https://rawcdn.githack.com/rafaelbotazini/floating-whatsapp/3d18b26d5c7d430a1ab0b664f8ca6b69014aed68/floating-wpp.min.js"></script>
 
 
 <!-- Jquery3.4.1      --><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <!-- modernz infinity --><script src="../js/src/modernizr.js"></script>
 <!-- pace infinity    --><script src="../js/src/pace.min.js"></script>
 <!-- #rWPP            --><script type="text/javascript" src="https://rawcdn.githack.com/rafaelbotazini/floating-whatsapp/3d18b26d5c7d430a1ab0b664f8ca6b69014aed68/floating-wpp.min.js"></script>
+
+
+<!-- Event snippet for Whatsapp Button conversion page
+In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
+<script>
+   function gtag_report_conversion3(url) {
+     var callback = function () {
+       if (typeof(url) != 'undefined') {
+         window.location = url;
+       }
+     };
+     gtag('event', 'conversion', {
+         'send_to': 'AW-963730457/IHweCOa9gPQCEJm4xcsD',
+         'event_callback': callback
+     });
+     return false;
+   }
+   </script>
+
 
 <!-- Global site tag (gtag.js) - Google Ads: 963730457 -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-963730457"></script>
@@ -181,7 +202,18 @@
 
 </section>
 
+<div id="WAButton"
+   style="font-family: Arial, Helvetica, sans-serif; z-index:1003;position:fixed;bottom:2rem;right:2rem;opacity:0.7;">
 
+</div>
+<button id="WAButton" onclick="return gtag_report_conversion3();" style="z-index:1001">
+   <img id="WAButton" src="../images/whatsapp.png" style="height:40px; 
+      width:40px;
+      position:fixed;
+      bottom:4rem;
+      right:3rem;
+      z-index:1001" />
+</button>
 </body>
 
 
@@ -190,6 +222,7 @@
 <script  src="../js/faq.js"></script> 
 <script  src="../js/src/plugins.js"></script>
 <script  src="../js/src/main.js"></script>
+<script  src="../js/indexService.js"></script>
 
 
 </html>
