--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -252,10 +252,10 @@
 		</div>
 		<div class=" competencias ofertFiltro" id="contenedorPromo" >
 		<div id="footer" >
-				<img id="imagenPromo" src="../images/prodcutos de Oferta/campera.jpeg">
+				<img id="imagenPromo" src="../images/promo-advanced.png">
 				<div style="padding-left:5rem;">
 					<h1 id="gancho">Llevando 4 cajas de Advanced <br />(cualquier graduacion)</h1>
-					<h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$4100</u> + 1 campera Valvoline Original</h1> 
+					<h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$4500 x bidon </u> + 1 Helatodo + 1 Jarra termica + 12 termos</h1> 
 				</div>
 			</div>	
 <!--         
@@ -274,10 +274,10 @@
 				<h1 id="gancho">PROMO 4x3 </h1>
 				<h1 id="gancho">Llevando 3 cajas te llevas 1 caja sin cargo</h1>
             
-				<h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$1980 el bidon</h1> 
+				<h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$2145 el bidon</h1> 
 			</div>
 		</div>	
-
+<!-- 
       <div id="footer" >
 			<img id="imagenPromo" src="../images/premium2.jpg">
 			<div style="padding-left:5rem;">
@@ -286,7 +286,7 @@
                <h4 id="gancho">  PH12482: Renault Kwid | PH5548A: VW Trend | PH5949: Fiat Fire | PH5796: Renault | G10230: Combustible</h4>
                <h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$2250 el bidon</h1> 
 			</div>
-		</div>
+		</div> -->
 		
 		</div>
 
@@ -365,21 +365,7 @@
 							<img class="imagenKit">
 							<h2 class="precio"></h2>
 						  </div>
-					</div>
-				  
-			</div> 
-		</div>
-<!--  
-		 <div class=" competencias ofertFiltro" id="contenedorPromo" >
-			<div id="footer" >
-				<img id="imagenPromo" src="../images/prodcutos de Oferta/tabla.png">
-				<div style="padding-left:5rem;">
-					<h1 id="gancho">Llevando 3 cajas surtidas, te llevas una tabla de cocina </h1>
-					<h1 id="recompensa" style="color:orange;"></h1> 
-				</div>
-			</div>	
-		</div>			   -->
-	</div>  
+					</div></div></div></div></div>  
 	<div class="container-fluid"></div>
 	</div>  
 </div>
@@ -388,6 +374,35 @@
 
 
 
+<section class="container-fluid ">
+	<div class="intro-wrap col-sm-12 negro">
+			<div class="container-fluid">
+            
+            <div id="titulo">
+               <h1 style="z-index:10;" >PUMA</h1>
+               <h1  id="compraMinima" style="z-index:10;">PRECIOS UNITARIOS FINALES LLEVANDO CAJA CERRADA</h1>
+            </div>
+            
+         </div>	
+         <div class="container-fluid"><h1 id="subtitulo">.</h1></div> 	
+ 
+		<div class="container-fluid">  
+			<div class="container-fluid competencias pumaOfertas" style="justify-content: left;" >
+				<div class="row">
+					  <div class="col-4 col-sm-3 puma" id="plantilla17">
+						  <div class="rectanguloOferta">
+							<h2 class="titulo"></h2>
+							<h5 class="detalle"></h5>
+							<img class="imagenKit">
+							<h2 class="precio"></h2>
+						  </div>
+					</div>
+				  
+			</div> 
+		</div>
+	</div>  
+</div>
+</section> 
 
 
 
