--- a/views/html/indexofertas.html
+++ b/views/html/indexofertas.html
@@ -52,7 +52,7 @@
 		<div class="intro-wrap col-sm-12 negro">
 			<div class="container-fluid" style="display:flex;">
 				<div id="titulo">
-					<h1 style="z-index:10;" >OFERTAS</h1>
+					<h1 style="z-index:10;" >OFERTASSSSS</h1>
 				</div>
 				<div id="triangulo">
 				
