--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -252,7 +252,7 @@
 		</div>
 		<div class=" competencias ofertFiltro" id="contenedorPromo" >
 		<div id="footer" >
-				<img id="imagenPromo" src="../images/fondo naranja.jpg">
+				<img id="imagenPromo" src="../images/kitParrillero.jpeg">
 				<div style="padding-left:5rem;">
 					<h1 id="gancho">Llevando 4 cajas de Advanced <br />(cualquier graduacion)</h1>
 					<h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$5600 x bidon </u> </h1> 
