--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -261,10 +261,10 @@
             </div>
             <div class=" competencias ofertFiltro" id="contenedorPromo">
               <div id="footer">
-                <img id="imagenPromo" src="../images/kitParrillero.jpeg">
+                <img id="imagenPromo" src="../images/Metegol.png">
                 <div style="padding-left:5rem;">
                   <h1 id="gancho">Llevando 4 cajas de Advanced <br />(cualquier graduacion)</h1>
-                  <h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$7990 x bidon </u> </h1>
+                  <h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$8500 x bidon </u> </h1>
                 </div>
               </div>
               <!--         
