--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -280,10 +280,10 @@
               <div id="footer">
                 <img id="imagenPromo" src="../images/premium.jpg">
                 <div style="padding-left:5rem;">
-                  <h1 id="gancho">PROMO 4x3 </h1>
-                  <h1 id="gancho">Llevando 3 cajas te llevas 1 caja sin cargo</h1>
+                  <h1 id="gancho">PROMO </h1>
+                  <h1 id="gancho">Llevando 4 cajas</h1>
 
-                  <h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$3850 el bidon</h1>
+                  <h1 id="recompensa" style="color:orange;">Pagas <u style="font-weight:bold">$4290 el bidon</h1>
                 </div>
               </div>
               <!-- 
